app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: http
  name: http
spec:
  ports:
  - name: 8000-tcp
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: http
  type: ClusterIP
